Openapi fixes
